# challenge-icml-2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled.ipynb  blogpost.md  env_setup.sh  gnn_test.ipynb  pr_tutorial.sh  pyproject.toml  random.ipynb  requirements.txt  scratch.py  test.py
.github/workflows/: lint.yml  test_codebase.yml  test_tutorials.yml
configs/: __init__.py
configs/dataset/: AQSOL.yaml  IMDB-BINARY.yaml  IMDB-MULTI.yaml  MUTAG.yaml  NCI1.yaml  NCI109.yaml  PROTEINS_TU.yaml  REDDIT-BINARY.yaml  ZINC.yaml  coauthorship_citeseer.yaml  coauthorship_cora.yaml  cocitation_citeseer.yaml  cocitation_cora.yaml  cocitation_cora_add.yaml  cocitation_pubmed.yaml  karate_club.yaml  manual_dataset.yaml
configs/datasets/: AQSOL.yaml  Ethereum.yaml  IMDB-MULTI.yaml  KarateClub.yaml  MNIST.yaml  MUTAG.yaml  NCI1.yaml  NCI109.yaml  NewDataset.yaml  P12.yaml  PROTEINS_TU.yaml  QM9.yaml  REDDIT-BINARY.yaml  ShapeNet.yaml  UniProt.yaml  ZINC.yaml  annulus.yaml  cocitation_citeseer.yaml  cocitation_cora.yaml  cocitation_pubmed.yaml  contact_primary_school.yaml  geo_shapes.yaml  graph_8.yaml  gudhi_bunny.yaml  gudhi_daily_activities.yaml  gudhi_sphere.yaml  gudhi_spiral_2d.yaml  gudhi_torus.yaml  karate_club.yaml  manual_cell_complex.yaml  manual_cliques_dataset.yaml  manual_dataset.yaml  manual_hypergraph.yaml  manual_hypergraph_dataset.yaml  manual_mol.yaml  manual_points.yaml  manual_prot.yaml  manual_prot_pointcloud.yaml  manual_rings.yaml  manual_rings_dataset.yaml  (+10 more)
configs/models/cell/: cwn.yaml
configs/models/combinatorial/: hmc.yaml
configs/models/graph/: gcn.yaml  graphsage.yaml
configs/models/hypergraph/: unigcn.yaml
configs/models/simplicial/: empsn.yaml  san.yaml
configs/transforms/data_manipulations/: data_fields_to_dense.yaml  equal_gaus_features.yaml  filter_enough_simplices.yaml  identity.yaml  input_preproc.yaml  keep_connected_component.yaml  keep_selected_fields.yaml  label_preproc.yaml  node_degrees.yaml  node_feat_to_float.yaml  one_hot_node_degree_features.yaml  remove_extra_feature.yaml
configs/transforms/feature_liftings/: base_lifting.yaml  element_wise_mean.yaml  project_element_wise_mean.yaml  projection_mean.yaml  projection_sum.yaml  sum.yaml
configs/transforms/liftings/: identity.yaml
datasets/Transactions/: EthereumTokenNetwork.pt
jobs/scripts/: install_env  train  train_alpha
modules/: __init__.py
modules/base/: ScatterAggregation.py  econv.py
modules/data/load/: base.py  loaders.py
modules/data/preprocess/: preprocessor.py
modules/data/utils/: concat2geometric_dataset.py  custom_dataset.py  utils.py
modules/io/load/: loaders.py  preprocessor.py  split_utils.py  utils.py
modules/io/preprocess/: preprocessor.py
modules/io/preprocessor/: preprocessor.py
modules/io/utils/: split_utils.py  utils.py
modules/matroid/: matroid.py
modules/models/: model_utils.py
modules/models/cell/: cwn.py
modules/models/combinatorial/: hmc.py  spcc.py
modules/models/graph/: gcn.py  graphsage.py
modules/models/hypergraph/: unigcn.py
modules/models/simplicial/: empsn.py  empsn_layer.py  esmpn.py  esmpn_layer.py  san.py
modules/transforms/: data_transform.py
modules/transforms/data_manipulations/: manipulations.py
modules/transforms/feature_liftings/: feature_liftings.py
modules/transforms/liftings/: graph2cell.py  graph2hypergraph.py  graph2simplicial.py  graph_lifting.py  lifting.py
modules/utils/: matroid.py  utils.py
src/: data_transform.py  data_utils.py  light_empsn.py  main.py  main_light.py  utils.py
test/transforms/feature_liftings/: test_ConcatenationLifting.py  test_ProjectionLifting.py  test_SetLifting.py  test_projection_sum.py
test/tutorials/: test_tutorials.py
topobenchmark/data/load/: loaders.py
topobenchmark/data/utils/: utils.py
tutorials/cell2graph/: cell_encoding_lifting.ipynb
tutorials/digraph2simplicial/: weighted_clique_lifting.ipynb
tutorials/graph2cell/: CellCycleLifting.ipynb  cycle_lifting.ipynb  discrete_configuration_complex_lifting.ipynb  neighborhood_lifting.ipynb  ring_lifting.ipynb
tutorials/graph2combinatorial/: curve_lifting.ipynb  functional_lifting.ipynb  mapper_lifting.ipynb  n_hop_lifting.ipynb  path_lifting.ipynb  probabilistic_clique_lifting.ipynb  ring_close_atoms_lifting.ipynb  sp_lifting.ipynb  sp_lifting.py
tutorials/graph2hypergraph/: HypergraphKNNLifting.ipynb  attribute_lifting.ipynb  close_lifting.ipynb  expander_graph_lifting.ipynb  forman_ricci_curvature_lifting.ipynb  kernel_lifting.ipynb  khop_lifting.ipynb  knn_lifting.ipynb  line_lifting.ipynb  mapper_lifting.ipynb  modularity_maximization_lifting.ipynb  node_centrality_lifting.ipynb  page_rank_lifting.ipynb  path_lifting.ipynb  spectral_lifting.ipynb
tutorials/graph2pointcloud/: spin_lifting.ipynb
tutorials/graph2simplicial/: SimplicialCliqueLifting.ipynb  clique_lifting.ipynb  cy2c_lifting.ipynb  directed_clique_lifting.ipynb  dnd_lifting.ipynb  eccentricity_lifting.ipynb  graph_induced_lifting.ipynb  independent_sets_lifting.ipynb  latentclique_lifting.ipynb  line_lifting.ipynb  neighborhood_complex_lifting.ipynb  neighborhood_lifting.ipynb  randomclique_lifting.ipynb  vietoris_rips_lifting.ipynb  vietorisrips_lifting.ipynb
tutorials/hypergraph2combinatorial/: universal_strict_lifting.ipynb
tutorials/hypergraph2simplicial/: heat_lifting.py
tutorials/pointcloud2combinatorial/: close_lifting.ipynb
tutorials/pointcloud2graph/: cover_lifting.ipynb  delaunay_lifting.ipynb  geodesic_lifting.ipynb  knn_lifting.ipynb  random_walks_lifting.ipynb  voronoi_lifting.ipynb
tutorials/pointcloud2hypergraph/: mogmst_lifting.ipynb  pointnet_lifting.ipynb  voronoi_lifting.ipynb
tutorials/pointcloud2simplicial/: alpha_complex_lifting.ipynb  ball_pivoting.ipynb  delaunay_lifting.ipynb  feature_rips_complex_lifting.ipynb  point_cloud_complex_lifting.ipynb  raindrop_drop_top_lifting.ipynb  random_flag_complex_lifting.ipynb  tangential_lifting.ipynb  vietoris_rips_lifting.ipynb  witness_lifting.ipynb
tutorials/simplicial2combinatorial/: coface_cc_lifting.ipynb
(+240 files in other folders)
